# pyembed

./: .gitignore  CMakeLists.txt  LICENSE  README.md
debugger/: boost_python.natvis  cpython38.natvis
example/: CMakeLists.txt  embedding.cpp  example.cpp
examples/: CMakeLists.txt  embedding.cpp  extending.cpp  simple.cpp
examples/scripts/: script_args.py  script_interrupt.py  test_extending.py  中文.py
include/: pyembed.h  pymebed.h
natvis/: boost.python.natvis  cpython36.natvis  cpython38.natvis
src/: pyconvert.hpp  pyembed.cpp  pymebed.cpp
src/utility/: config.h  string_conv_iconv.hpp  string_conv_unix.hpp  string_conv_win.hpp  utility.hpp
